--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
           </li>
           <li class="nav-item dropdown">
             <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <%= image_tag "https://kitt.lewagon.com/placeholder/users/dmbf29", class: "avatar", alt: "dropdown menu" %>
+              <%= image_tag "https://media.printables.com/media/prints/744872/images/5815268_a3bff0c6-4b08-4082-83ff-e773b4aec2ad_f82d2ae9-4bba-4dc6-86a5-7f7b4f98e48a/thumbs/inside/1280x960/png/rick-roll-2.webp", class: "avatar", alt: "dropdown menu" %>
             </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "Challenges", challenges_path, class: "dropdown-item" %>
