--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -1,7 +1,11 @@
 <h1>Challenges</h1>
-
 <ul>
   <% @challenges.each do |challenge| %>
-    <li><%= link_to challenge.name, challenge_path(challenge) %></li>
+    <li>
+      <%= link_to challenge.name, challenge_path(challenge) %>
+      <%= link_to challenge_path(challenge), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'text-secondary text-decoration-none' do %>
+        <i class="fa-solid fa-xmark"></i>
+      <% end %>
+    </li>
   <% end %>
 </ul>
