--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -1,11 +1,16 @@
 <h1>Challenges</h1>
 <ul>
   <% @challenges.each do |challenge| %>
-    <li>
+    <li data-controller="alert">
       <%= link_to challenge.name, challenge_path(challenge) %>
-      <%= link_to challenge_path(challenge), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'text-secondary text-decoration-none' do %>
+      <%# Just a link to trigger the alert (What the user sees) %>
+      <%= link_to "#", data: { action: 'click->alert#show' }, class: 'text-secondary text-decoration-none' do %>
         <i class="fa-solid fa-xmark"></i>
       <% end %>
+      <%# Just an empty link to delete the challenge (User doesnt see this) %>
+      <%= link_to "", challenge_path(challenge), data: { turbo_method: :delete, alert_target: 'link' } %>
     </li>
   <% end %>
 </ul>
+<%# Action? %>
+<%# Target(s)? %>
