--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -12,31 +12,19 @@
     </ol>
   </nav>
 </div>
+<% if Rails.env.development? %>
+  <span class="float-end">
+    Input tokens: <%= @input_tokens %> / Output tokens: <%= @output_tokens %>
+  </span>
+<% end %>
 <div id="chat_title">
   <h1><%= @chat.title %></h1>
 </div>
 <div id="messages">
-  <% @chat.messages.each do |message| %>
-    <% if message.role == "user" %>
-      <div class="d-flex justify-content-end mb-2">
-        <div class="bg-white px-3 pb-0 pt-3 rounded-pill">
-          <%= raw(render_markdown(message.content)) %>
-        </div>
-      </div>
-    <% elsif message.role == "assistant" %>
-      <div class="d-flex justify-content-start mb-5">
-        <div class="px-3 pb-0 pt-3">
-          <%= raw(render_markdown(message.content)) %>
-        </div>
-      </div>
-    <% end %>
-  <% end %>
+  <%= render 'messages/messages', messages: @chat.messages.order(:created_at) %>
 </div>
 <div id="new_message">
-  <%= simple_form_for [@chat, @message], html: { data: { controller: 'spin '}} do |f| %>
-    <%= f.input :content, placeholder: "Ask a question", required: true, label: false %>
-    <%= f.button :submit, 'Ask LLM', class: 'btn btn-primary', data: { action: 'click->spin#start'} %>
-  <% end %>
+  <%= render "messages/form", chat: @chat, message: @message %>
 </div>
 <%# <a href="" data-action="click->controller#action"></a> %>
 <%# Controller -> it'll have it's own file, wrap it around all the HTML you need %>
