--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -20,8 +20,9 @@
 <div id="chat_title">
   <h1><%= @chat.title %></h1>
 </div>
+<%= turbo_stream_from @chat %>
 <div id="messages">
-  <%= render 'messages/messages', messages: @chat.messages.order(:created_at) %>
+  <%= render 'messages/messages', messages: @chat.messages.visible.order(:created_at) %>
 </div>
 <div id="new_message">
   <%= render "messages/form", chat: @chat, message: @message %>
